--- a/report/capitulos/capitulo3.tex
+++ b/report/capitulos/capitulo3.tex
@@ -4,7 +4,5 @@
 \label{Chapter3}
 \lhead{Capítulo 3. \emph{Optimizaciones a la herramienta}}
 
-\section{División de la prueba}
 \section{Conjetura inicial}
-\section{Optimizaciones específicas para planificadores paralelos}
-\subsection{Horizontes}
+\section{Horizontes para planificadores basados en SAT}
