--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -241,6 +241,7 @@ Agradecimientos aquí.
 \listofsymbols{ll}  % Include a list of Abbreviations (a table of two columns)
 {
 % \textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
+\textbf{CNF} & \textbf{C}onjunctive \textbf{N}ormal \textbf{F}orm\\
 \textbf{LPO} & \textbf{L}ógica de \textbf{P}rimer \textbf{O}rden\\
 \textbf{LSO} & \textbf{L}ógica de \textbf{S}egundo \textbf{O}rden\\
 \textbf{LSO} & \textbf{T}eoría de \textbf{C}omplejidad \textbf{D}escriptiva\\
