--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -26,6 +26,7 @@
 \usepackage{tabularx}
 \usepackage{caption}
 \usepackage{multirow}
+\usepackage{lscape}
 %:%s/\(bibitem.\+\)and/\1y/g
 %\usepackage[letterpaper, inner=3cm, outer=2cm]{geometry}
 %\addtolength[\topmargin]{-1.5cm}
@@ -302,6 +303,7 @@ $[u:=v]$ & sustitución textual de $u$ por $v$
 \appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
 
 \input{./apendices/apendiceA}
+\input{./apendices/apendiceB}
 
 \addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
 \backmatter
